<resources>
    <string name="app_name">BoosterApp4</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="app_logo">App Logo</string>
    <string name="back_button">Back Button</string>
    <string name="title_activity_side_nav">side_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="genres">Genres</string>
    <string name="adventure">adventure</string>
    <string name="action">action</string>
    <string name="Adventure">Adventure</string>
    <string name="Detective">Detective</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="mystery">Mystery</string>
    <string name="Mystery">Mystery</string>
    <string name="Sci_fi">Sci_Fi</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Thriller">Thriller</string>
    <string name="Anime">Anime</string>
    <string name="Comedy">Comedy</string>
    <string name="Romance">Romance</string>
    <string name="Action">Action</string>
    <string name="Crime">Crime</string>
    <string name="Drama">Drama</string>
    <string name="Historical">Historical</string>
    <string name="Horror">Horror</string>
    <string name="favorites">Favorites</string>
    <string name="failed_to_retrieve_video">Failed to retrieve video</string>
</resources>