<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_action"
            android:title="@string/Action"/>
        <item
            android:id="@+id/nav_adventure"
            android:title="@string/Adventure" />
        <item
            android:id="@+id/nav_anime"
            android:title="@string/Anime" />
        <item
            android:id="@+id/nav_comedy"
            android:title="@string/Comedy"/>
        <item
            android:id="@+id/nav_crime"
            android:title="@string/Crime"/>
        <item
            android:id="@+id/nav_drama"
            android:title="@string/Drama"/>
        <item
            android:id="@+id/nav_Fantasy"
            android:title="@string/Fantasy" />
        <item
            android:id="@+id/nav_historical"
            android:title="@string/Historical" />
        <item
            android:id="@+id/nav_horror"
            android:title="@string/Horror" />
        <item
            android:id="@+id/nav_mystery"
            android:title="@string/Mystery" />
        <item
            android:id="@+id/nav_romance"
            android:title="@string/Romance"/>
        <item
            android:id="@+id/nav_scifi"
            android:title="Sci-Fi" />
        <item
            android:id="@+id/nav_thriller"
            android:title="@string/Thriller" />

    </group>
</menu>