<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/movie_details_background_gradient">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/logo_details"
        app:layout_constraintBottom_toBottomOf="@id/logo_details"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/rating_details"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/movie_rating_circular_background"
        android:padding="8dp"
        android:textColor="#9A9A9A"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="83%"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/movie_poster_detail"
        app:layout_constraintBottom_toTopOf="@id/fav_button"
        app:layout_constraintStart_toEndOf="@id/movie_name"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/rating_progress_bar_details"
        android:layout_width="48dp"
        android:layout_height="48dp"
        style="?android:progressBarStyleHorizontal"
        tools:progress="83"
        android:progressDrawable="@drawable/rounded_progress_bar_rating"
        app:layout_constraintTop_toTopOf="@id/rating_details"
        app:layout_constraintBottom_toBottomOf="@id/rating_details"
        app:layout_constraintStart_toStartOf="@id/rating_details"
        app:layout_constraintEnd_toEndOf="@id/rating_details"/>

    <TextView
        android:id="@+id/vote_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#9A9A9A"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="100,000"
        app:drawableLeftCompat="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="0dp"
        app:layout_constraintStart_toStartOf="@id/rating_details"
        app:layout_constraintEnd_toEndOf="@id/rating_details"
        app:layout_constraintTop_toBottomOf="@id/rating_details" />

    <ImageButton
        android:id="@+id/fav_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/vote_count"
        app:layout_constraintBottom_toBottomOf="@id/movie_poster_detail"
        app:layout_constraintStart_toStartOf="@id/rating_details"
        app:layout_constraintEnd_toEndOf="@id/rating_details"
        android:contentDescription="@string/movie_poster" />

    <ImageView
        android:id="@+id/logo_details"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_margin="24dp"
        android:src="@drawable/the_movie_database_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo" />

    <ImageView
        android:id="@+id/movie_poster_detail"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:padding="2dp"
        android:background="#1B4C80"
        tools:src="@drawable/inception"
        android:contentDescription="@string/movie_poster"
        android:adjustViewBounds="true"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/logo_details"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/movie_name"
        style="@style/MovieDataTextViewStyle"
        tools:text="Title: Inception"
        app:layout_constraintStart_toEndOf="@id/movie_poster_detail"
        app:layout_constraintEnd_toStartOf="@id/rating_details"
        app:layout_constraintTop_toTopOf="@id/movie_poster_detail"
        app:layout_constraintBottom_toTopOf="@id/release_date"/>

    <TextView
        android:id="@+id/release_date"
        style="@style/MovieDataTextViewStyle"
        tools:text="Release Date: 14 July 2010"
        app:layout_constraintStart_toEndOf="@id/movie_poster_detail"
        app:layout_constraintEnd_toStartOf="@id/rating_details"
        app:layout_constraintTop_toBottomOf="@id/movie_name"
        app:layout_constraintBottom_toTopOf="@id/languages"/>

    <TextView
        android:id="@+id/languages"
        style="@style/MovieDataTextViewStyle"
        tools:text="Languages: English"
        app:layout_constraintStart_toEndOf="@id/movie_poster_detail"
        app:layout_constraintEnd_toStartOf="@id/rating_details"
        app:layout_constraintTop_toBottomOf="@id/release_date"
        app:layout_constraintBottom_toBottomOf="@id/movie_poster_detail"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:layout_above="@+id/bottom_nav"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_poster_detail"
        tools:layout_editor_absoluteX="-3dp">
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:itemIconTint="#1d74a6"
        app:itemTextColor="#1d74a6"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
